
/*------------------------------------------------------------------------------
 * AUTO GENERATED
 *----------------------------------------------------------------------------*/

syntax = "proto3";
package caikit.runtime.Nlp;


/*-- MESSAGES ----------------------------------------------------------------*/

message BidiStreamingTokenClassificationTaskRequest {

  /*-- fields --*/
  string text_stream = 1;
  optional double threshold = 2;
}
