
/*------------------------------------------------------------------------------
 * AUTO GENERATED
 *----------------------------------------------------------------------------*/

syntax = "proto3";
package caikit.runtime.Nlp;


/*-- MESSAGES ----------------------------------------------------------------*/

message EmbeddingTasksRequest {

  /*-- fields --*/
  repeated string texts = 1;
  optional int64 truncate_input_tokens = 2;
}
