
/*------------------------------------------------------------------------------
 * AUTO GENERATED
 *----------------------------------------------------------------------------*/

syntax = "proto3";
package caikit.runtime.Nlp;


/*-- MESSAGES ----------------------------------------------------------------*/

message TextClassificationTaskRequest {

  /*-- fields --*/
  string text = 1;
}
