
/*------------------------------------------------------------------------------
 * AUTO GENERATED
 *----------------------------------------------------------------------------*/

syntax = "proto3";
package caikit_data_model.nlp;
import "caikit_data_model.nlp.classificationresult.proto";


/*-- MESSAGES ----------------------------------------------------------------*/

message ClassificationResults {

  /*-- fields --*/
  repeated caikit_data_model.nlp.ClassificationResult results = 1;
}
