
/*------------------------------------------------------------------------------
 * AUTO GENERATED
 *----------------------------------------------------------------------------*/

syntax = "proto3";
package caikit_data_model.nlp;
import "caikit_data_model.common.producerid.proto";
import "caikit_data_model.nlp.finishreason.proto";


/*-- MESSAGES ----------------------------------------------------------------*/

message GeneratedTextResult {

  /*-- fields --*/
  string generated_text = 1;
  int64 generated_tokens = 2;
  caikit_data_model.nlp.FinishReason finish_reason = 3;
  caikit_data_model.common.ProducerId producer_id = 4;
  int64 input_token_count = 5;
  uint64 seed = 6;
}
