
/*------------------------------------------------------------------------------
 * AUTO GENERATED
 *----------------------------------------------------------------------------*/

syntax = "proto3";
package caikit_data_model.nlp;
import "caikit_data_model.common.producerid.proto";
import "caikit_data_model.nlp.generatedtoken.proto";
import "caikit_data_model.nlp.tokenstreamdetails.proto";


/*-- MESSAGES ----------------------------------------------------------------*/

message GeneratedTextStreamResult {

  /*-- fields --*/
  string generated_text = 1;
  repeated caikit_data_model.nlp.GeneratedToken tokens = 2;
  caikit_data_model.nlp.TokenStreamDetails details = 3;
  caikit_data_model.common.ProducerId producer_id = 4;
}
