
/*------------------------------------------------------------------------------
 * AUTO GENERATED
 *----------------------------------------------------------------------------*/

syntax = "proto3";
package caikit_data_model.runtime;
import "google/protobuf/timestamp.proto";
import "caikit_data_model_common.proto";


/*-- MESSAGES ----------------------------------------------------------------*/

message ModelPointer {

  /*-- fields --*/
  string model_id = 1;
}

message TrainingInfoRequest {

  /*-- fields --*/
  string training_id = 1;
}

message TrainingJob {

  /*-- fields --*/
  string training_id = 1;
  string model_name = 2;
}

message TrainingStatusResponse {

  /*-- fields --*/
  string training_id = 1;
  caikit_data_model.common.TrainingStatus state = 2;
  google.protobuf.Timestamp submission_timestamp = 3;
  google.protobuf.Timestamp completion_timestamp = 4;
  repeated string reasons = 5;
}
