
/*------------------------------------------------------------------------------
 * AUTO GENERATED
 *----------------------------------------------------------------------------*/

syntax = "proto3";
package caikit.runtime.Nlp;
import "caikit.runtime.Nlp.bidistreamingtokenclassificationtaskrequest.proto";
import "caikit.runtime.Nlp.embeddingtaskrequest.proto";
import "caikit.runtime.Nlp.embeddingtasksrequest.proto";
import "caikit.runtime.Nlp.reranktaskrequest.proto";
import "caikit.runtime.Nlp.reranktasksrequest.proto";
import "caikit.runtime.Nlp.sentencesimilaritytaskrequest.proto";
import "caikit.runtime.Nlp.sentencesimilaritytasksrequest.proto";
import "caikit.runtime.Nlp.serverstreamingtextgenerationtaskrequest.proto";
import "caikit.runtime.Nlp.textclassificationtaskrequest.proto";
import "caikit.runtime.Nlp.textgenerationtaskrequest.proto";
import "caikit.runtime.Nlp.tokenclassificationtaskrequest.proto";
import "caikit_data_model.caikit_nlp.embeddingresult.proto";
import "caikit_data_model.caikit_nlp.embeddingresults.proto";
import "caikit_data_model.caikit_nlp.rerankresult.proto";
import "caikit_data_model.caikit_nlp.rerankresults.proto";
import "caikit_data_model.caikit_nlp.sentencesimilarityresult.proto";
import "caikit_data_model.caikit_nlp.sentencesimilarityresults.proto";
import "caikit_data_model.nlp.classificationresults.proto";
import "caikit_data_model.nlp.generatedtextresult.proto";
import "caikit_data_model.nlp.generatedtextstreamresult.proto";
import "caikit_data_model.nlp.tokenclassificationresults.proto";
import "caikit_data_model.nlp.tokenclassificationstreamresult.proto";


/*-- SERVICES ----------------------------------------------------------------*/

service NlpService {
  rpc BidiStreamingTokenClassificationTaskPredict(stream caikit.runtime.Nlp.BidiStreamingTokenClassificationTaskRequest) returns (stream caikit_data_model.nlp.TokenClassificationStreamResult);
  rpc EmbeddingTaskPredict(caikit.runtime.Nlp.EmbeddingTaskRequest) returns (caikit_data_model.caikit_nlp.EmbeddingResult);
  rpc EmbeddingTasksPredict(caikit.runtime.Nlp.EmbeddingTasksRequest) returns (caikit_data_model.caikit_nlp.EmbeddingResults);
  rpc RerankTaskPredict(caikit.runtime.Nlp.RerankTaskRequest) returns (caikit_data_model.caikit_nlp.RerankResult);
  rpc RerankTasksPredict(caikit.runtime.Nlp.RerankTasksRequest) returns (caikit_data_model.caikit_nlp.RerankResults);
  rpc SentenceSimilarityTaskPredict(caikit.runtime.Nlp.SentenceSimilarityTaskRequest) returns (caikit_data_model.caikit_nlp.SentenceSimilarityResult);
  rpc SentenceSimilarityTasksPredict(caikit.runtime.Nlp.SentenceSimilarityTasksRequest) returns (caikit_data_model.caikit_nlp.SentenceSimilarityResults);
  rpc ServerStreamingTextGenerationTaskPredict(caikit.runtime.Nlp.ServerStreamingTextGenerationTaskRequest) returns (stream caikit_data_model.nlp.GeneratedTextStreamResult);
  rpc TextClassificationTaskPredict(caikit.runtime.Nlp.TextClassificationTaskRequest) returns (caikit_data_model.nlp.ClassificationResults);
  rpc TextGenerationTaskPredict(caikit.runtime.Nlp.TextGenerationTaskRequest) returns (caikit_data_model.nlp.GeneratedTextResult);
  rpc TokenClassificationTaskPredict(caikit.runtime.Nlp.TokenClassificationTaskRequest) returns (caikit_data_model.nlp.TokenClassificationResults);
}
